# PINNeAPPle

./: .gitignore  CITATION.cff  generate_doc.py  mkdocs.yml  package_map.json  pyproject.toml
configs/: README.md
configs/data/: bundle_schema.yaml
configs/problemdesign/: flow_obstacle_2d_prompt.yaml  flow_obstacle_2d_spec_example.yaml  flow_obstacle_2d_spec_schema.yaml
examples/app/: README.md  app.py  index.html
examples/pinneaple_models/: 02_autoencoders.py  03_classical_ts.py  04_pinns.py  05_continuous.py
examples/pinneaple_problemdesign/: 01_SimpleUseCase.py  02_Api.py
examples/pinneaple_researcher/: 01_discover.py  02_build_kb.py  03_extract.py  04_reproduce.py
examples/pinneaple_timeseries/: 01_FNO.py
pinneaple_arena/: __init__.py
pinneaple_arena/backends/: __init__.py  native_pinn.py  physicsnemo_sym.py
pinneaple_arena/bundle/: __init__.py  loader.py  schema.py
pinneaple_arena/io/: __init__.py  yamlx.py
pinneaple_arena/runner/: __init__.py  leaderboard.py  metrics.py  report.py  run_benchmark.py
pinneaple_arena/tasks/: __init__.py  flow_obstacle_2d.py
pinneaple_data/: cache.py  cache_bytes.py  chunking.py  collate.py  dataloaders.py  device.py  physical_sample.py  prefetch_adaptive.py  serialization.py  upd_dataset.py  validators.py  zarr_cached_store.py  zarr_cached_store_bytes.py  zarr_iterable.py  zarr_prefetch.py  zarr_shard_iterable.py  zarr_shards.py  zarr_store.py
pinneaple_data/adapters/: geom_adapter.py  upd_adapter.py
pinneaple_data/synth/: base.py  curvefit.py  distributions.py  geometry.py  geometry_cadquery.py  images.py  pde.py  pde_symbolic.py  registry.py  sample_adapter.py
pinneaple_geom/core/: geometry.py  mesh.py  registry.py
pinneaple_geom/io/: cadquery_bridge.py  meshio_bridge.py  openfoam.py  stl.py  trimesh_bridge.py
pinneaple_geom/ops/: features.py  remesh.py  repair.py  simplify.py
pinneaple_geom/sample/: barycentric.py  grids.py  points.py
pinneaple_models/: _registry_bridge.py  base.py  catalog.py  register_all.py  registry.py
pinneaple_models/autoencoders/: ae_2d.py  ae_rom_hybrid.py  base.py  dense_ae.py  kae.py  koopman_pi_ae.py  registry.py  vae.py
pinneaple_models/classical_ts/: arima.py  base.py  ekf.py  enkf.py  kalman.py  registry.py  (+3 more)
pinneaple_pdb/: builder.py  derived.py  shard.py  templates.py  validate.py
pinneaple_problemdesign/: __init__.py  agent.py  cli.py  extractor.py  merge.py  policy.py  protocol.py  schema.py  state.py
pinneaple_researcher/: __init__.py  config.py  models.py  ranking.py
pinneaple_solvers/: base.py  fem.py  fft.py  fvm.py  hilbert_huang.py  registry.py
pinneaple_timeseries/: __init__.py  base.py  datamodule.py  losses.py  metrics.py  registry.py  spec.py
pinneaple_train/: audit.py  callbacks.py  checkpoint.py  datamodule.py  inference.py  losses.py  metrics.py  normalizers.py  preprocess.py  splits.py  trainer.py  viz.py
scripts/: README.md
(+155 files in other folders)
